styles/style.css
body {
  margin: 0;
  background-color: rgba(220, 221, 225,1.0);
  font-family: 'Montserrat', sans-serif;
  font-size: 150%;
  color: rgba(47, 54, 64,1.0);
}


/*
  Menu Bar
*/

.on-top {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 100;
}

#menu-bar {
  display: inline-grid;
  grid-template-columns: 1fr 2fr;
  width: 100%;
  height: 5%;
  padding: 5px;
  background-color: rgba(42, 49, 59, 0.95);
}

#menu-bar a {
  text-decoration: none;
}

#logo {
  text-transform: capitalize;
  color: #DFDFDF;
  font-weight: bold;
  transition-duration: 2s;
  margin-left: 25px;
  padding-left: 5px;

  border-width: 0px 0px 0px 3px;
  border-color: #DFDFDF;
  border-style: solid
}

#menu-bar nav {
  display: inline-grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  color: white;
  margin-right: 25px;
}

#menu-bar nav a {
  display: flex;
  justify-content: center;
  align-items: center;

  text-transform: uppercase;
  color: #DFDFDF;

  transition-duration: 0.4s;
}

#menu-bar nav a:hover {
  font-size: 115%;
  background-color: rgba(220, 221, 225,1.0);
  color: #000000;
}


/*
  Site
*/

.text-light {
  color: #424242;
}

h1 {
  font-size: 200%;
  margin-top: 20%;
  font-weight: 200;
  text-transform: uppercase;
  text-align: center;
  margin-bottom: 0;
  margin-left: 10%;
  margin-right: 10%;
}

#my-title {
  position: relative;
  font-size: 150%;

  font-weight: 200;
  text-transform: uppercase;
  text-align: center;
  margin-left: 10%;
  margin-right: 10%;
}

#my-title:before {
  content: "";
  position: absolute;
  top: 0%;
  left: 50%;
  height: 0px;
  width: 0%;
  border-bottom: 4px solid #424242;
  transform: translateY(-10px);


  animation-name: line-animation;
  animation-duration: 2s;
  -webkit-animation-fill-mode: forwards;
  /* Safari 4.0 - 8.0 */
  animation-fill-mode: forwards;
  animation-timing-function: ease-in-out;
}

@keyframes line-animation {
  from {
    left: 50%;
    width: 0%;
  }
  to {
    left: 20%;
    width: 60%;
  }
}


.page-grid {
  display: grid;
  grid-template-columns: 1fr;
  margin-top: 5%;
  margin-bottom: 100px;
  width: 80%;
  margin-left: 10%;
  background-color: rgba(245, 246, 250,1.0);

  border-width: 1px;
  border-style: solid;
  border-color: #CECECE;
}

.shadow {
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
}

.content {
  margin: 30% 10% 30px 10%;
}

.content-part {
  margin-top: 50px;
}

.container {
  position: relative;
  width: 20%;
  margin: 0 auto;
  z-index: 0;
}

#my-picture {
  display: absolute;

  width: 100%;


  border-width: 5px;
  border-color: black;
  border-style: solid;

  border-radius: 50%;
}

.overlay {
  position: absolute;
  left: 0;
  top: 0;

  width: 100%;
  height: 94%;
  opacity: 0;
  transition: .5s ease;
  background-color: rgba(39, 60, 117,1.0);

  border-width: 5px;
  border-color: black;
  border-style: solid;
  border-radius: 50%;
}

.content h2 {
  text-align: center;
  text-transform: capitalize;
}

.content p {
  text-align: justify;
  margin: 0% 10% 0% 10%;
}

.container:hover .overlay {
  opacity: 1;
  border-color: #0F0F1F;
}

.text {
  color: white;
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

.project-grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  width: 100%;
  height: 100%;
  border-width: 1px;
  border-style: solid;
  border-color: #CECECE;
}

.project-grid img {

  width: 100%;
  height: 100%;
}

.project {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 100%;
}

.inner {
  position: absolute;
}

.project-overview {
  transition-duration: .5s;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
  opacity: 0;

  color: white;
  text-align: center;
  font-size: 80%;
}

.project-overview:hover {
  opacity: 1;
  background-color: rgba(25, 42, 86,0.95);
}

.project-overview h3 {
  transform: translateY(-20px);
  opacity: 0;
  transition-duration: 1s;
}

.project-overview:hover h3 {
  transform: translateY(0px);
  opacity: 1;
}

.project-info {
  border-width: 3px 0px 0px 0px;
  border-color: white;
  border-style: solid;

  margin: 5px;
  padding: 10px;
  bottom: 0;

  transform: translateY(20px);
  opacity: 0;
  transition-duration: 1s;
}

.project-overview:hover .project-info {
  transform: translateY(0px);
  opacity: 1;
}

/*
Skills
*/

.skills-grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  width: 100%;
  border-width: 1px;
  border-style: solid;
  border-color: #CECECE;

  font-size: 60%;
}

.skills-grid h3{
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 140%;
}

.skill-element {
  width: 100%;
  padding: 3px 0px 3px 0px;
  margin: 0px;
}

.skill-element .inside {
  margin-left: 8px;
}

.skill-element:nth-child(4n - 1) {
  background-color: rgba(220, 221, 225,1.0);
}

.skill-element:nth-child(4n - 2) {
  background-color: rgba(220, 221, 225,1.0);
}

/*
Social Media Tab styles 
*/

.social-media-tab {
  position: fixed;
  padding: 0;
  margin: 0;

  top: 50%;
  left: 0;

  z-index: 100;
}

.social-media-tab nav {
  padding: 0;
  margin: 0;
}

.social-media-tab ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.social-media-tab li {
  display: block;
  font-size: 40px;
}

.social-text {
  font-size: 9px;
  text-align: left;
  color: black;
}

.social-icon {
  transition-duration: 1s;
  text-decoration: none;
  padding: 5px;
}

.social-icon:hover {
  padding-left: 50px;
}


.github-icon {
  background-color: #211F1F;
  color: white;
}

.linkedin-icon {
  color: white;
  background-color: #0077B5;
}

.freecodecamp-icon {
  color: white;
  background-color: darkgreen;
  font-size: 33px !important;
  padding: 11px 1px 10px 1px;
}


footer {
  text-align: center;
  font-size: 10px;
}

@media (orientation:portrait) {
  .page-grid {
    margin-top: 15%;
  }
}

@media (orientation:portrait) and (max-width: 600px) {
  .page-grid {
    margin-top: 20%;
  }

  body {
    font-size: 90%;
  }
}

@media (orientation:portrait) and (max-width: 400px) {
  .page-grid {
    margin-top: 25%;
  }
}

@media (orientation:landscape) and (max-width: 1440px) {
  .page-grid {
    margin-top: 8%;
  }
}

@media (orientation:landscape) and (max-width: 900px) {
  .page-grid {
    margin-top: 15%;
  }
}

@media (max-width: 1480px) {
  .project-grid {
    grid-template-columns: 1fr 1fr;
  }
}

@media (max-width: 1000px) {
  .project-grid {
    grid-template-columns: 1fr;
  }
  .project-overview {
    font-size: 100%;
  }
}

@media (max-width: 500px) {
  .project-overview {
    font-size: 80%;
  }
}

